--- a/src/App.module.sass
+++ b/src/App.module.sass
@@ -4,10 +4,7 @@
     box-sizing: border-box
 
 .App
-    display: grid
-    grid-template-columns: 1fr 1fr
-    grid-gap: 25px
-    grid-template-areas: ' forms forms' 'chart analitics'
+    display: flex
     z-index: 1
     height: 100vh
 
