--- a/src/features/Components/Form/Forms.module.sass
+++ b/src/features/Components/Form/Forms.module.sass
@@ -1,7 +1,7 @@
 .forms
     grid-area: forms
-    height: 400px !important
-    width: 400px !important
+    height: 500px 
+    width: 40%
     margin: 15% auto
     position: relative
     
