--- a/src/features/Components/Statistic/Statistic.module.sass
+++ b/src/features/Components/Statistic/Statistic.module.sass
@@ -2,6 +2,7 @@
 .Statistic
     height: 300px
     grid-area: analitics
+    width: 30%
     margin: 20% auto
 
     p
@@ -9,7 +10,12 @@
         margin: 20px
         align-self: center
 
-  
+.plus
+    color: green
+
+.minus
+    color: red
+
 @keyframes appear
 
     0%
