--- a/src/features/common/wrapper/Wrapper.module.sass
+++ b/src/features/common/wrapper/Wrapper.module.sass
@@ -8,12 +8,12 @@
     width: 100%
     display: flex
 
-// @keyframes appearBG
+@keyframes appearBG
 
-//     0%
-//         background-color: rgb(215,219,219,0)
+    0%
+        background-color: rgb(215,219,219,0)
 
-//     100%
-//         background-color: rgb(215,219,219,0.5)
+    100%
+        background-color: rgb(215,219,219,0.5)
 
   
