--- a/src/App.module.sass
+++ b/src/App.module.sass
@@ -16,3 +16,16 @@
         position: absolute
         height: 100vh
         width: 100vw
+    
+    .backBtn
+        position: absolute
+        background-color: rgb(215,219,219,0.5)
+        text-align: center
+        color: black
+        border-radius: 20px
+        height: 30px
+        width: 100px
+        top: 75vh
+        left: 50%
+        z-index: 9
+
