--- a/src/features/Components/Form/Forms.module.sass
+++ b/src/features/Components/Form/Forms.module.sass
@@ -2,7 +2,8 @@
     grid-area: forms
     height: 500px 
     width: 40%
-    margin: 15% auto
+    align-self: center
+    margin: 0 auto
     padding: 20px
     position: relative
     
