--- a/src/App.module.sass
+++ b/src/App.module.sass
@@ -7,6 +7,7 @@
     display: flex
     z-index: 1
     height: 100vh
+    justify-content: space-around
 
     &::after
         content: ''
@@ -17,15 +18,5 @@
         height: 100vh
         width: 100vw
     
-    .backBtn
-        position: absolute
-        background-color: rgb(215,219,219,0.5)
-        text-align: center
-        color: black
-        border-radius: 20px
-        height: 30px
-        width: 100px
-        top: 75vh
-        left: 50%
-        z-index: 9
+    
 
