--- a/src/features/Components/Chart/Chart.module.sass
+++ b/src/features/Components/Chart/Chart.module.sass
@@ -1,11 +1,10 @@
 .Chart
     height: 300px
     width: 50%
-    grid-area: chart
-    margin: 20% auto
 
     canvas
-        padding: 20px
+        padding: 40px 20px
         align-self: center
+
 
 
