--- a/src/features/Components/Statistic/Statistic.module.sass
+++ b/src/features/Components/Statistic/Statistic.module.sass
@@ -1,14 +1,34 @@
 
 .Statistic
     height: 300px
-    grid-area: analitics
     width: 30%
-    margin: 20% auto
-
+    
     p
         animation: 1s linear appear forwards
         margin: 20px
         align-self: center
+    
+    i, b
+        text-decoration: underline
+
+    b
+        margin: 0 5px
+    
+    .content
+        align-self: center
+
+
+.backBtn
+        position: absolute
+        background-color: rgb(215,219,219,0.5)
+        text-align: center
+        color: black
+        border-radius: 20px
+        height: 30px
+        width: 100px
+        top: 40px
+        left: 5%
+        z-index: 9
 
 .plus
     color: green
