--- a/src/App.module.sass
+++ b/src/App.module.sass
@@ -2,6 +2,7 @@
     margin: 0px
     padding: 0px
     box-sizing: border-box
+    font-family: 'Montserrat', sans-serif
 
 .App
     display: flex
@@ -12,11 +13,8 @@
     &::after
         content: ''
         background: url('https://images.unsplash.com/photo-1483728642387-6c3bdd6c93e5?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxleHBsb3JlLWZlZWR8NHx8fGVufDB8fHx8&w=1000&q=80')
-        background-size: cover    
+        background-size: cover
         filter: blur(8px)
         position: absolute
         height: 100vh
         width: 100vw
-    
-    
-
